# borked-bot

./: .gitignore  README.md  login.py  login.sh  pyproject.toml  requirements.txt  run.sh  setup.py  user-config.py
borked_bot/: __init__.py  __meta__.py  run.py
borked_bot/ballotpedia_page/: pages.rq  run.py
borked_bot/bsky/: query.rq  set_bsky_did.py
borked_bot/fandom_page/: pages.rq  run.py
borked_bot/goodreads/: run.py  unlinked_isbns.rq
borked_bot/goodreads_author_fill/: authors.rq  run.py
borked_bot/goodreads_book_fill/: books.rq  run.py
borked_bot/goodreads_book_to_author/: books_with_authors.rq  run.py
borked_bot/goodreads_book_to_work/: run.py  unlinked_gr_books.rq
borked_bot/goodreads_isbn_to_book/: run.py  unlinked_isbns.rq
borked_bot/https_url/: __main__.py  run.py  urls.rq
borked_bot/kymeme/: query.rq  update_kym.py
borked_bot/prefer_dates/: __main__.py  dates.rq  run.py
borked_bot/steam/: api.py  query.rq  update_steam_data.py
borked_bot/stocks/: run.py  tickers.rq
borked_bot/subreddit/: run.py
borked_bot/tw_backfill/: accounts.rq  run.py
borked_bot/tw_follows/: __main__.py  accounts.rq  accounts_all.rq  run.py
borked_bot/tw_user_id/: __main__.py  handles.rq  run.py
borked_bot/util/: batcher.py  mediawiki.py  ratelimit.py  twitch.py  twitter.py  util.py  (+1 more)
etc/: ballotpedia-cron.yaml  deployment.yaml  fandom-cron.yaml  prefer-dates.yaml  twit-cron.yaml  twit-fol-cron.yaml  twitch-cron.yaml  twitch-fol-cron.yaml  update_crons.sh  yt-cron.yaml  yt-fol-cron-all.yaml  yt-fol-cron-enwiki.yaml  yt-fol-cron.yaml  yt-vid-cron.yaml
(+11 files in other folders)
